--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <li>{{ name }}</li>
     {% endfor %}
 </ul>
+<button onclick="location.reload();">Try Again</button>
 {% endif %}
 
 </body>
 </html>
+
